--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 database.driver_class = org.postgresql.Driver
-database.url = jdbc:postgresql://localhost:5432/java13
+database.url = jdbc:postgresql://localhost:5432/postgres
 database.user = postgres
 database.pass = 1234
 
